Fix X logo on mobile

--- a/components/x_twitter/index.module.scss
+++ b/components/x_twitter/index.module.scss
@@ -44,12 +44,6 @@
   fill: #440000;
 }
 
-@include tablet {
-  .x {
-    margin-top: 0.2vw;
-  }
-}
-
 @include mobile {
   .arrow {
     width: 2.2vh;
@@ -57,8 +51,16 @@
   }
 
   .x {
-    width: 3.15vh;
-    height: 3.15vh;
-    margin: 0.6vh 0 0 1.3vh;
+    width: 5.5vw;
+    height: 5.5vw;
+    margin: 1vw 0 0 2.3vw;
   }
 }
+
+
+@include tablet {
+  .x {
+    margin-top: 0.2vw;
+  }
+}
+
